@@ -1,3 +1,7 @@
+2020-07-31  Dirk Eddelbuettel  <edd@debian.org>
+
+	* .travis.yml: Update to 'bionic' and R 4.0.*
+
 2019-09-24  Dirk Eddelbuettel  <edd@debian.org>
 
 	* DESCRIPTION (Version, Date): Roll minor version
